Implementing splitInvoice Request 3195
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43132

--- a/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/BillingCycle/MainExtensions/BillingPeriod/Templates/WeeklyBillingPeriodTemplate.html
+++ b/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/BillingCycle/MainExtensions/BillingPeriod/Templates/WeeklyBillingPeriodTemplate.html
@@ -9,4 +9,9 @@
                    hideremoveicon="true">
         </vr-select>
     </vr-columns>
+    <vr-columns width="1/2row">
+        <vr-switch label="Split Invoice"
+                   value="scopeModel.splitInvoice">
+        </vr-switch>
+    </vr-columns>
 </vr-row>
