Implementing open CDRs for repeated number
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43133

--- a/TOneV2/Code/TOneV2/TOne.WhS.Analytics.Web/WhS_Analytics/Directives/RepeatedNumber/Templates/RepeatedNumberGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Analytics.Web/WhS_Analytics/Directives/RepeatedNumber/Templates/RepeatedNumberGridTemplate.html
@@ -4,6 +4,7 @@
                  on-ready="onGridReady"
                  dataretrievalfunction="dataRetrievalFunction"
                  pagingtype="'PagingOnScroll'"
+                 menuactions="gridMenuActions"
                  idfield="Entity.Attempt"
                  defaultsortbyfieldname="'Entity.Attempt'"
                  defaultsortdirection="'DESC'" enableautoexport="true">
