--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/CarrierAccount/CarrierAccountManagement.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/CarrierAccount/CarrierAccountManagement.html
@@ -10,10 +10,6 @@
                     <vr-columns width="normal" haschildcolumns>
                         <vr-whs-be-carrierprofile-selector on-ready="onCarrierProfileDirectiveReady" ismultipleselection></vr-whs-be-carrierprofile-selector>
                     </vr-columns>
-
-                    <vr-whs-be-activationstatus-selector normal-col-num="2" ismultipleselection on-ready="onActivationStatusDirectiveReady">
-                    </vr-whs-be-activationstatus-selector>
-
                     <vr-columns colnum="2">
                         <vr-select datatextfield="description" datavaluefield="value" label="Carrier Type" datasource="carrierAccountTypes"
                                    selectedvalues="selectedCarrierAccountTypes" ismultipleselection onselectionchanged="onCarrierTypeSelectionChanged">
@@ -23,7 +19,15 @@
                         <vr-whs-be-sellingnumberplan-selector normal-col-num="2" on-ready="onSellingNumberPlanDirectiveReady" selectedvalues="selectedSellingNumberPlans" ismultipleselection>
                         </vr-whs-be-sellingnumberplan-selector>
                     </span>
-
+                    <span vr-loader="isLoadingSellingProduct" ng-show="showSellingProduct">
+                        <vr-whs-be-sellingproduct-selector on-ready="onSellingProductSelectorReady"
+                                                           selectedvalues="selectedSellingProducts"
+                                                           normal-col-num="2"
+                                                           ismultipleselection>
+                        </vr-whs-be-sellingproduct-selector>
+                    </span>
+                    <vr-whs-be-activationstatus-selector normal-col-num="2" hideselectedvaluessection ismultipleselection on-ready="onActivationStatusDirectiveReady">
+                    </vr-whs-be-activationstatus-selector>
                     <span ng-show="showZoneService">
                         <vr-whs-be-zone-service-config-selector on-ready="onZoneServiceConfigSelectorReady"
                                                                 selectedvalues="servicesValues"
@@ -31,11 +35,9 @@
                                                                 ismultipleselection="true">
                         </vr-whs-be-zone-service-config-selector>
                     </span>
-
-
                 </vr-row>
-                </vr-validationgroup>
-</div>
+            </vr-validation-group>
+        </div>
 
         <vr-row removeline>
             <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
