--- a/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/Runtime/AnalyticReport/History/Templates/HistoryAnalyticReportRuntimeTemplates.html
+++ b/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/Runtime/AnalyticReport/History/Templates/HistoryAnalyticReportRuntimeTemplates.html
@@ -18,7 +18,7 @@
                 <vr-common-currency-selector on-ready="scopeModel.onCurrencySelectorReady" normal-col-num="2"></vr-common-currency-selector>
             </span>
             <vr-columns colnum="6" haschildcolumns>
-                <vr-timerange on-ready="scopeModel.onTimeRangeDirectiveReady " width="1/3row" type="dateTime" from="scopeModel.fromdate" to="scopeModel.todate" period="selectedPeriod" isrequired="false"></vr-timerange>
+                <vr-timerange on-ready="scopeModel.onTimeRangeDirectiveReady " width="1/3row" type="longDateTime" from="scopeModel.fromdate" to="scopeModel.todate" period="selectedPeriod" isrequired="false"></vr-timerange>
             </vr-columns>
             <span ng-repeat="filter in scopeModel.filters">
                 <vr-directivewrapper directive="filter.directiveEditor" on-ready="filter.onDirectiveReady" normal-col-num="2" isrequired="filter.isRequired"></vr-directivewrapper>
