Adding SaleZone selector @CustomerRoute Management
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43144

--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Views/CustomerRoute/CustomerRouteManagement.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Views/CustomerRoute/CustomerRouteManagement.html
@@ -5,6 +5,7 @@
                 <vr-columns colnum="2">
                     <vr-whs-routing-routingdatabase-selector getcustomerroutes on-ready="onRoutingDatabaseSelectorReady" isrequired></vr-whs-routing-routingdatabase-selector>
                 </vr-columns>
+                <vr-whs-be-salezone-selector on-ready="onSaleZoneSelectorReady" normal-col-num="2" ismultipleselection></vr-whs-be-salezone-selector>
                 <vr-columns colnum="2">
                     <vr-textbox value="code" type="number" minvalue="1" label="Code"></vr-textbox>
                 </vr-columns>
