--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/Extensions/RouteRuleSettings/Templates/RouteRuleLCRDirective.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/Extensions/RouteRuleSettings/Templates/RouteRuleLCRDirective.html
@@ -1,12 +1,12 @@
 ﻿<vr-section title="Excluded Options">
     <vr-row>
-        <vr-columns width="1/4row">
+        <vr-columns width="1/3row">
             <vr-whs-be-carrieraccount-selector on-ready="scopeModel.onCarrierAccountDirectiveReady" selectedvalues="scopeModel.selectedSuppliers"
                                                onselectitem="scopeModel.onSelectSupplier" ondeselectitem="scopeModel.onDeselectSupplier"
-                                               ismultipleselection hideselectedvaluessection getsuppliers>
+                                               ismultipleselection getsuppliers>
             </vr-whs-be-carrieraccount-selector>
         </vr-columns>
-        <vr-columns width="3/4row" simplecol>
+        <vr-columns width="2/3row" simplecol ng-show="false">
             <vr-validator validate="scopeModel.isValid()">
                 <vr-datagrid datasource="scopeModel.fixedSuppliers" 
                              ondeleterow="scopeModel.onDeleteRow"
