Ability to set title for setting column in generic rule
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43149

--- a/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Directives/MainExtensions/GenericRule/Templates/GenericRuleDefinitionSettingsSelectiveTemplate.html
+++ b/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Directives/MainExtensions/GenericRule/Templates/GenericRuleDefinitionSettingsSelectiveTemplate.html
@@ -12,6 +12,9 @@
                        hideremoveicon vr-disabled="ctrl.disableType">
             </vr-select>
         </vr-columns>
+        <vr-columns width="1/3row">
+            <vr-textbox label="Grid Setting Title" value="scopeModel.gridSettingTitle" />
+        </vr-columns>
     </vr-row>
     <vr-row>
         <vr-columns width="fullrow" ng-if="scopeModel.selectedSettingsTemplate != undefined" vr-loader="scopeModel.isLoadingDirective">
