Implementing billing transactions for invoice
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43153

--- a/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Web/WhS_Invoice/Directives/InvoiceAccountTypes/CustomerInvoice/Templates/CustomerInvoiceSettingsDefinitionTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Web/WhS_Invoice/Directives/InvoiceAccountTypes/CustomerInvoice/Templates/CustomerInvoiceSettingsDefinitionTemplate.html
@@ -1,1 +1,2 @@
-﻿
+﻿<vr-accountbalance-billingtransactiontype-selector on-ready="scopeModel.onInvoiceTransactionTypeSelectorReady" normal-col-num="2" isrequired="true"></vr-accountbalance-billingtransactiontype-selector>
+<vr-accountbalance-billingtransactiontype-selector on-ready="scopeModel.onUsageTransactionTypeSelectorReady" normal-col-num="2" ismultipleselection isrequired="true"></vr-accountbalance-billingtransactiontype-selector>
