change code group to country
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43154

--- a/TOneV2/Code/TOneV2/TOne.WhS.Analytics.Web/WhS_Analytics/Views/TrafficAnalysis/ReleaseCodeStatistics.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Analytics.Web/WhS_Analytics/Views/TrafficAnalysis/ReleaseCodeStatistics.html
@@ -15,9 +15,7 @@
                     <vr-common-country-selector normal-col-num="2" on-ready="onCountryDirectiveReady" ismultipleselection></vr-common-country-selector>
                 </span>-->
 
-                <vr-columns width="normal">
-                    <vr-whs-be-codegroup-selector normal-col-num="2" on-ready="onCodeGroupDirectiveReady" ismultipleselection></vr-whs-be-codegroup-selector>
-                </vr-columns>
+                 <vr-common-country-selector normal-col-num="2" on-ready="onCountryReady" ismultipleselection></vr-common-country-selector>
 
                 <vr-whs-be-salezone-masterplan-selector normal-col-num="2" ismultipleselection on-ready="onSaleZoneDirectiveReady"></vr-whs-be-salezone-masterplan-selector>
 
