Update Supplier target match
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43157

--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Views/SupplierTargetMatch/SupplierTargetMatch.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Views/SupplierTargetMatch/SupplierTargetMatch.html
@@ -13,7 +13,7 @@
             <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
                 <div transclude-to="buttons">
                     <vr-button type="Load" validationcontext="LoadTargetMatch" data-onclick="loadClicked"></vr-button>
-                    <vr-button type="Export" ng-show="showExportButton"></vr-button>
+                    <vr-button type="Export" ng-show="showExportButton" data-onclick="exportData"></vr-button>
                 </div>
             </vr-actionbar>
         </vr-row>
