--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/SupplierTargetMatch/Templates/SupplierTargetMatchFilterTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/SupplierTargetMatch/Templates/SupplierTargetMatchFilterTemplate.html
@@ -55,6 +55,9 @@
             <vr-columns colnum="2">
                 <vr-textbox label="Margin" type="number" value="scopeModel.margin" isrequired></vr-textbox>
             </vr-columns>
+            <vr-columns colnum="2">
+                <vr-textbox type="number" label="Volume Multiplier" value="scopeModel.volumeMultiplier" minvalue="1" isrequired></vr-textbox>
+            </vr-columns>
         </vr-row>
     </vr-tab>
     <vr-tab header="'Export Settings'">
