--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/SupplierTargetMatch/Templates/SupplierTargetMatchGrid.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/SupplierTargetMatch/Templates/SupplierTargetMatchGrid.html
@@ -2,15 +2,16 @@
 <vr-datagrid datasource="scopeModel.targetMatches"
              pagingtype="'Pager'"
              on-ready="scopeModel.onGridReady"
-             dataretrievalfunction="scopeModel.dataRetrievalFunction">
+             dataretrievalfunction="scopeModel.dataRetrievalFunction"
+             enableautoexport="true">
     <vr-datagridcolumn headertext="'Zone'" field="'Entity.SaleZone'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Volume'" field="'Entity.Volume'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Volume'" field="'Entity.Volume'" type="'Number'" numberprecision="'LongPrecision'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Route Options'" widthfactor="35" disablesorting="true">
         <div vr-loader="dataItem.isLoadingRouteOptions">
             <vr-whs-routing-zonerouteoptions on-ready="dataItem.onRouteOptionsReady"></vr-whs-routing-zonerouteoptions>
         </div>
     </vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Target Volume'" field="'Entity.TargetVolume'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Target Volume'" field="'Entity.TargetVolume'" type="'Number'" numberprecision="'LongPrecision'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Target Route Options'" widthfactor="35" disablesorting="true">
         <div vr-loader="dataItem.isLoadingTargetRouteOptions">
             <vr-whs-routing-zonerouteoptions on-ready="dataItem.onTargetRouteOptionsReady"></vr-whs-routing-zonerouteoptions>
