--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/Settings/Templates/PricingSettingsTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/Settings/Templates/PricingSettingsTemplate.html
@@ -17,7 +17,7 @@
 
 <vr-row>
     <vr-columns width="1/2row">
-        <vr-textbox label="Effective Date Day Offset" type="number"
+        <vr-textbox label="Numbering Plan Day Offset" type="number"
                     value="ctrl.effectiveDateDayOffset" minvalue="0"
                     ng-if="ctrl.showEffectiveDateDayOffset"
                     isrequired="ctrl.isEffectiveDateDayOffset"></vr-textbox>
