--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SellingProduct/SellingProductEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SellingProduct/SellingProductEditor.html
@@ -20,6 +20,9 @@
                         </span>
                     </vr-row>
                 </vr-tab>
+                <vr-tab header="'Pricing Settings'">
+                    <vr-whs-be-pricingsettings-editor on-ready="scopeModal.onPricingSettingsEditorReady"></vr-whs-be-pricingsettings-editor>
+                </vr-tab>
             </vr-tabs>
         </vr-form>
     </vr-modalbody>
