--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/Settings/Templates/SaleAreaSettingsTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/Settings/Templates/SaleAreaSettingsTemplate.html
@@ -4,10 +4,6 @@
         <vr-tab header="'General'">
             <vr-row>
                 <vr-columns width="1/2row">
-                    <vr-label>Default Rate ({{ctrl.systemCurrencySymbol}})</vr-label>
-                    <vr-textbox value="ctrl.defaultRate" type="number" minvalue="0" decimalprecision="8" isrequired></vr-textbox>
-                </vr-columns>
-                <vr-columns width="1/2row">
                     <vr-select label="Primary Sale Entity"
                                entityname="Primary Sale Entity"
                                on-ready="ctrl.onPrimarySaleEntitySelectorReady"
@@ -19,37 +15,15 @@
                                hideremoveicon="true">
                     </vr-select>
                 </vr-columns>
-                <vr-columns width="1/2row">
-                    <vr-common-mailmessagetemplate-selector on-ready="onPriceListEmailTemplateSelectorReady"
-                                                            customlabel="Sale PriceList Email Template"
-                                                            isrequired="true" showaddbutton>
-                    </vr-common-mailmessagetemplate-selector>
-                </vr-columns>
-                <vr-whs-be-salepricelisttemplate-selector on-ready="ctrl.onSalePLTemplateSelectorReady"
-                                                          normal-col-num="6"
-                                                          isrequired="true"
-                                                          hideremoveicon="true" showaddbutton>
-                </vr-whs-be-salepricelisttemplate-selector>
-                <vr-columns width="1/2row">
-                    <vr-textbox label="Effective Date Day Offset" type="number" value="ctrl.effectiveDateDayOffset" minvalue="0" isrequired="true"></vr-textbox>
-                </vr-columns>
-                <vr-columns width="1/2row">
-                    <vr-textbox label="Retroactive Day Offset" type="number" value="ctrl.retroactiveDayOffset" minvalue="0" isrequired="true"></vr-textbox>
-                </vr-columns>
-                <vr-whs-be-pricelistextensionformat-selector on-ready="onPriceListExtensionFormatSelectorReady"
-                                                             normal-col-num="6"
-                                                             isrequired="true">
-                </vr-whs-be-pricelistextensionformat-selector>
-                <vr-whs-be-salepricelisttype-selector on-ready="onPriceListTypeSelectorReady"
-                                                      normal-col-num="6"
-                                                      isrequired="true">
-                </vr-whs-be-salepricelisttype-selector>
             </vr-row>
-            <vr-row>
-                <vr-columns width="1/2row">
-                    <vr-textbox label="Max Sale Rate ({{ctrl.systemCurrencySymbol}})" value="ctrl.maximumRate" minvalue="0" type="number" isrequired="true"></vr-textbox>
-                </vr-columns>
-            </vr-row>
+        </vr-tab>
+
+        <vr-tab header="'Pricing Settings'">
+            <vr-whs-be-pricingsettings-editor on-ready="ctrl.onPricingSettingsEditorReady"></vr-whs-be-pricingsettings-editor>
+        </vr-tab>
+
+        <vr-tab header="'Pricelist Settings'">
+            <vr-whs-be-pricelistsettings-editor on-ready="ctrl.onPriceListSettingsEditorReady"></vr-whs-be-pricelistsettings-editor>
         </vr-tab>
 
         <vr-tab header="'Keywords'">
@@ -96,8 +70,6 @@
                     </vr-validator>
                 </vr-columns>
             </vr-row>
-
         </vr-tab>
-
     </vr-tabs>
 </vr-columns> 
