--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/CarrierAccount/CarrierAccountEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/CarrierAccount/CarrierAccountEditor.html
@@ -65,6 +65,7 @@
                         </vr-columns>
                 </vr-tab>
                 <vr-tab header="'Customer Settings'" ng-if="scopeModel.showSellingNumberPlan">
+                    <vr-section header="General Settings">
                     <vr-row>
                         <span vr-loader="scopeModel.isLoadingCustomerTimeZoneSelector">
                             <vr-common-timezone-selector on-ready="scopeModel.onCustomerTimeSelectorReady" normal-col-num="6" showaddbutton></vr-common-timezone-selector>
@@ -95,19 +96,16 @@
                                                               hideremoveicon>
                             </vr-whs-be-routingstatus-selector>
                         </span>
-                        <vr-whs-be-pricelistextensionformat-selector on-ready="scopeModel.onPriceListExtensionFormatSelectorReady"
-                                                                     normal-col-num="6"
-                                                                     isrequired="false">
-                        </vr-whs-be-pricelistextensionformat-selector>
-                        <vr-whs-be-salepricelisttype-selector on-ready="scopeModel.onPriceListTypeSelectorReady"
-                                                              normal-col-num="6"
-                                                              isrequired="false">
-                        </vr-whs-be-salepricelisttype-selector>
-                        <vr-columns width="1/2row">
-                            <vr-switch value="scopeModel.compressPriceListFile" label="Compressed Pricelist File"></vr-switch>
-                        </vr-columns>
                     </vr-row>
+                    </vr-section>
+                    <vr-section header="Pricing Settings" ng-if="scopeModel.showSellingNumberPlan" vr-loader="scopeModel.isLoadingPricingSettingsEditor">
+                        <vr-whs-be-pricingsettings-editor on-ready="scopeModel.onPricingSettingsEditorReady"></vr-whs-be-pricingsettings-editor>
+                    </vr-section>
+                    <vr-section header="Pricelist Settings" ng-if="scopeModel.showSellingNumberPlan" vr-loader="scopeModel.isLoadingPriceListSettingsEditor">
+                        <vr-whs-be-pricelistsettings-editor on-ready="scopeModel.onPriceListSettingsEditorReady"></vr-whs-be-pricelistsettings-editor>
+                    </vr-section>
                 </vr-tab>
+                
                 <vr-tab header="'Supplier Settings'" ng-if="scopeModel.showZoneServiceConfig">
                     <vr-row>
                         <span vr-loader="scopeModel.isLoadingSupplierTimeZoneSelector">
