implementation CarrierProfile inline selector add
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43177

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/CarrierAccount/CarrierAccountEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/CarrierAccount/CarrierAccountEditor.html
@@ -8,7 +8,7 @@
                             <vr-textbox value="scopeModel.name" label="Suffix"></vr-textbox>
                         </vr-columns>
                         <span vr-disabled="scopeModel.disableCarrierProfile">
-                            <vr-whs-be-carrierprofile-selector normal-col-num="6" isrequired onselectionchanged="scopeModel.onCarrierProfileSelectionChanged" on-ready="scopeModel.onCarrierProfileSelectorReady">
+                            <vr-whs-be-carrierprofile-selector normal-col-num="6" showaddbutton isrequired onselectionchanged="scopeModel.onCarrierProfileSelectionChanged" on-ready="scopeModel.onCarrierProfileSelectorReady">
                             </vr-whs-be-carrierprofile-selector>
                         </span>
                         <vr-columns width="1/2row">
