--- a/Retail/Code/Retail.Teles.Web/Retail_Teles/Directives/AccountCondition/Templates/TelesAccountConditionTemplate.html
+++ b/Retail/Code/Retail.Teles.Web/Retail_Teles/Directives/AccountCondition/Templates/TelesAccountConditionTemplate.html
@@ -22,3 +22,8 @@
                                 normal-col-num="3"
                                 isrequired="true">
 </retail-be-accounttype-selector>
+<retail-be-accounttype-selector on-ready="scopeModel.onUserAccountTypeSelectorReady"
+                                customlabel="User Account Type"
+                                normal-col-num="3"
+                                isrequired="true">
+</retail-be-accounttype-selector>
